@@ -16,6 +16,8 @@
     also accept multiple values via direct invocation after being
     captured through `call/cc`, not just via `values` (#1390)
   - Removed the deprecated C_locative_ref and C_mutate2 C functions.
+  - The trace buffer no longer holds on to thread objects, allowing them to
+    be garbage collected sooner (#1356, thanks to Kristian Lein-Mathisen)
 
 - Compiler
   - Fixed an off by one allocation problem in generated C code for (list ...).
